Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25018

Crash when debugging

XMLWordPrintable

    • dda67753250c57c85b3f005aa27c28117555aadd (qt-creator/qt-creator/4.14)

      Steps to reproduce:
      1. Run Creator from 4.14 branch compiled against Qt 5.15
      2. Load a Creator project from 4.14 branch compiled against Qt 6
      3. Start debugger
      4. When a new Creator appears, load there the same project again (Creator project from 4.14 branch compiled against Qt 6)
      5. Start debugger there. When launching the 3-rd Creator you get the following crash (seen in the first Creator, compiled against Qt 5.15):

      1  QChar::unicode                                                                                                                                                                                                     qchar.h                   480  0x7fffbf395594 
      2  Debugger::Internal::GdbMi::parseValue                                                                                                                                                                              debuggerprotocol.cpp      202  0x7fffbf46c4ef 
      3  Debugger::Internal::GdbMi::parseResultOrValue                                                                                                                                                                      debuggerprotocol.cpp      72   0x7fffbf46b95b 
      4  Debugger::Internal::GdbMi::fromString                                                                                                                                                                              debuggerprotocol.cpp      371  0x7fffbf46d711 
      5  Debugger::Internal::GdbEngine::handleResponse                                                                                                                                                                      gdbengine.cpp             406  0x7fffbf4a52c6 
      6  Debugger::Internal::GdbEngine::readGdbStandardOutput                                                                                                                                                               gdbengine.cpp             650  0x7fffbf4a7a38 
      7  QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Debugger::Internal::GdbEngine:: *)()>::call(void (Debugger::Internal::GdbEngine:: *)(), Debugger::Internal::GdbEngine *, void * *) qobjectdefs_impl.h        152  0x7fffbf4f273d 
      8  QtPrivate::FunctionPointer<void (Debugger::Internal::GdbEngine:: *)()>::call<QtPrivate::List<>, void>(void (Debugger::Internal::GdbEngine:: *)(), Debugger::Internal::GdbEngine *, void * *)                       qobjectdefs_impl.h        185  0x7fffbf4ee281 
      9  QtPrivate::QSlotObject<void (Debugger::Internal::GdbEngine:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                  qobjectdefs_impl.h        395  0x7fffbf4e8f67 
      10 QtPrivate::QSlotObjectBase::call                                                                                                                                                                                   qobjectdefs_impl.h        375  0x7ffff5978201 
      11 doActivate<false>                                                                                                                                                                                                  qobject.cpp               3826 0x7ffff5ca93c4 
      12 QMetaObject::activate                                                                                                                                                                                              qobject.cpp               3886 0x7ffff5ca31b1 
      13 QProcess::readyReadStandardOutput                                                                                                                                                                                  moc_qprocess.cpp          340  0x7ffff5bf2917 
      14 QProcessPrivate::tryReadFromChannel                                                                                                                                                                                qprocess.cpp              1012 0x7ffff5bf000c 
      15 QProcessPrivate::_q_canReadStandardOutput                                                                                                                                                                          qprocess.cpp              1023 0x7ffff5bf0080 
      16 QProcess::qt_static_metacall                                                                                                                                                                                       moc_qprocess.cpp          203  0x7ffff5bf225d 
      17 doActivate<false>                                                                                                                                                                                                  qobject.cpp               3838 0x7ffff5ca945d 
      18 QMetaObject::activate                                                                                                                                                                                              qobject.cpp               3886 0x7ffff5ca31b1 
      19 QSocketNotifier::activated                                                                                                                                                                                         moc_qsocketnotifier.cpp   182  0x7ffff59da1f5 
      20 QSocketNotifier::event                                                                                                                                                                                             qsocketnotifier.cpp       302  0x7ffff59d9ce0 
      21 QApplicationPrivate::notify_helper                                                                                                                                                                                 qapplication.cpp          3390 0x7ffff713a7b0 
      22 QApplication::notify                                                                                                                                                                                               qapplication.cpp          2753 0x7ffff7137e2b 
      23 QCoreApplication::notifyInternal2                                                                                                                                                                                  qcoreapplication.cpp      1040 0x7ffff595cf64 
      24 QCoreApplication::sendEvent                                                                                                                                                                                        qcoreapplication.cpp      1435 0x7ffff595d910 
      25 socketNotifierSourceDispatch                                                                                                                                                                                       qeventdispatcher_glib.cpp 107  0x7ffff5c6a51f 
      26 g_main_context_dispatch                                                                                                                                                                                                                           0x7ffff26557ef 
      27 g_main_context_iterate.constprop                                                                                                                                                                                                                  0x7ffff26a75d8 
      28 g_main_context_iteration                                                                                                                                                                                                                          0x7ffff2652bc3 
      29 QEventDispatcherGlib::processEvents                                                                                                                                                                                qeventdispatcher_glib.cpp 427  0x7ffff5c6b25c 
      30 QXcbGlibEventDispatcher::processEvents                                                                                                                                                                             qxcbeventdispatcher.cpp   132  0x7fffe415239c 
      31 QEventLoop::processEvents                                                                                                                                                                                          qeventloop.cpp            139  0x7ffff596d4a9 
      32 QEventLoop::exec                                                                                                                                                                                                   qeventloop.cpp            232  0x7ffff596d7da 
      33 QCoreApplication::exec                                                                                                                                                                                             qcoreapplication.cpp      1348 0x7ffff595d752 
      34 QGuiApplication::exec                                                                                                                                                                                              qguiapplication.cpp       1876 0x7ffff6536640 
      35 QApplication::exec                                                                                                                                                                                                 qapplication.cpp          2605 0x7ffff7137817 
      36 main                                                                                                                                                                                                               main.cpp                  742  0x40e8d5       
      

      Inside Debugger::Internal::GdbMi::parseValue: "from" is 0, "to" is 0x0 and "this->type" is Debugger::Internal::GdbMi::Invalid (0)

        For Gerrit Dashboard: QTCREATORBUG-25018
        # Subject Branch Project Status CR V

            hjk hjk
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes