Debugger: Fix crash in GdbMi::parseValue with Qt 6

QString::begin/end may be null in Qt 6.

Fixes: QTCREATORBUG-25018
Change-Id: If50cb79c58096d5fa68e494e33bea131063968fb
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>